Copyright (c) 2014-2017 Suewon Bahng, suewonjp@gmail.com

Last Updated (2017-11-29)

## Version 0.10.0 (2023-xx-xx)
- lf and lfi complete directory names only
- TODO: Following symlinks is now default behavior

## Version 0.9.0 (2017-11-29)
- Can search files through symlinks
  - For detail, see https://github.com/suewonjp/lf.sh/wiki/lf#heavy_check_mark-quick-behavioral-control-variables

## Version 0.8.0 (2017-10-31)
- Users can add prefix or postfix to each item of search result
- Users can quote each of search result
- Users can use nul byte as the separator instead of new line character

## Version 0.7.0 (2017-10-10)
- Users can specify folders to ignore by attaching 'ignore' variable
- Users can append or prepend new search result to the existing search result
- Fixed some minor bugs

## Version 0.6.0 (2017-06-14)
- Users can specify underlying grep tool when using 'g' or 'gi' command
- '.+' notation can be put together with base dir path

## Version 0.5.0 (2017-02-07)
- First Release.